2003-04-11: cvs - Roberto Ragusa
   . Added adaptive flow control algorithm for 5800L/5900L/6100L
     (5700L unchanged). It appears to be rock solid, according to
     first tests.
   . Printer replies are now interpreted and logged (if debug is on) for
     5800L/5900L. 5700L and 6100L need some work to implement that.
   . epl_test.sh can be run without having to "make install".
   . Misc fixes and moved some code around.

2003-04-10: cvs - Roberto Ragusa
   . Direct USB ("FlowControl") is now available for all printers.
   . Better detection of USB printers.
   . Misc changes to prepare the introduction of a new flow control
     algorithm.

2003-04-08: cvs - Roberto Ragusa
   . Better foomatic support for 6100L.

2003-04-03: 0.3.0 - Hin-Tak Leung
   . Minor change to overflow work around, and bumped version up to 0.3.0.

2003-04-02: cvs - Hin-Tak Leung
   . Header/footer re-organization to add preliminary 6100L support. 
       Regression-tested 57/58/59 spool file generation.

2003-03-21: cvs - Roberto Ragusa
   . !!Changed parameter name!!:
        The "USB" parameter is now called "FlowControl".
   . FlowControl option added to foomatic (5700L only).
   . Fixed Density default (now 3 for 5700L/5800L too).

2003-03-18: cvs - Hin-Tak Leung
   . Updated flow-control timing code. Can do 20 pages via libusb now.
   . removed some over-verbose debug outputs, added page number output.
   . Added apsfilter contrib setup.

2003-03-13: cvs - Roberto Ragusa
   . Compilation options in epl_config.h.
   . Protocol changes to work around printer crashes.
   . Removed epsonepl-PrintoutMode.xml composite option.
   . Misc fixes.

2003-03-10: cvs - Roberto Ragusa
   . Modifications to the foomatic stuff and spec file.

2003-02-28: cvs - Hin-Tak Leung
   . Merged in USB-related code, 
        configure now accepts --with-kerneldevice,--with-libusb
   . documentation update regarding USB and the 4-bit code.
   * !!Changed behavior!!: